tests/baselines/reference/APISample_WatchWithOwnWatchHost.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8912,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8912,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9172,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9172,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9522,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9522,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9546,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9546,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9633,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9633,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10798,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10798,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10809,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10809,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10819,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10819,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10894,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10894,47): error TS1005: ';' expected.
typescript_standalone.d.ts(10951,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10951,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11005,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11005,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11025,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11025,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11035,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11035,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11069,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11069,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11072,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11072,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11076,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11076,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11094,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11094,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11120,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11120,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11123,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11123,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11135,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11135,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11165,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11165,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11199,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11199,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11210,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11210,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11234,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11234,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11242,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11242,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11246,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11246,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11276,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11276,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11319,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11319,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11506,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11506,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11508,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11508,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11512,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11512,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11514,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11514,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11516,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11516,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11518,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11518,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11520,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11520,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11529,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11529,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11531,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11531,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11533,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11533,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11535,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11535,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11537,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11537,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11539,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11539,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11541,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11541,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11543,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11543,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11545,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11545,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11547,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11547,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11549,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11549,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11551,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11551,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11553,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11553,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11555,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11555,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11573,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11573,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11575,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11575,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11579,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11579,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11581,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11581,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11583,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11583,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11655,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11655,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11657,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11657,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11659,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11659,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11661,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11661,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11737,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11737,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_WatchWithOwnWatchHost.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. This sample verifies creating abstract builder to watch list of root files 
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var console: any;
    
    import ts = require("typescript");
    
    function watchMain() {
        // get list of files and compiler options somehow
        const files: string[] = [];
        const options: ts.CompilerOptions = {};
    
        const host: ts.WatchCompilerHostOfFilesAndCompilerOptions<ts.BuilderProgram> = {
            rootFiles: files,
            options,
    
            useCaseSensitiveFileNames: () => ts.sys.useCaseSensitiveFileNames,
            getNewLine: () => ts.sys.newLine,
            getCurrentDirectory: ts.sys.getCurrentDirectory,
            getDefaultLibFileName: options => ts.getDefaultLibFilePath(options),
    
            fileExists: ts.sys.fileExists,
            readFile: ts.sys.readFile,
            directoryExists: ts.sys.directoryExists,
            getDirectories: ts.sys.getDirectories,
            readDirectory: ts.sys.readDirectory,
            realpath: ts.sys.realpath,
    
            watchFile: ts.sys.watchFile!,
            watchDirectory: ts.sys.watchDirectory!,
            createProgram: ts.createAbstractBuilder
        };
    
        // You can technically override any given hook on the host, though you probably don't need to.
        // Note that we're assuming `origCreateProgram` and `origPostProgramCreate` doesn't use `this` at all.
        const origCreateProgram = host.createProgram;
        host.createProgram = (rootNames, options, host, oldProgram) => {
            console.log("** We're about to create the program! **");
            return origCreateProgram(rootNames, options, host, oldProgram);
        }
        const origPostProgramCreate = host.afterProgramCreate;
    
        host.afterProgramCreate = program => {
            console.log("** We finished making the program! **");
            origPostProgramCreate!(program);
        };
    
        // `createWatchProgram` creates an initial program, watches files, and updates the program over time.
        ts.createWatchProgram(host);
    }
    
    watchMain();
    